ui changes and order fixes

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,18 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+@keyframes reverseLoader {
+  from {
+    transform: translateX(0%);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+.animate-reverse-loader {
+  width: 100%;
+  animation: reverseLoader 1.2s linear infinite;
+}
